KTXProcessor cleanup